--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Dayz.GitHub.io</h1>
+      <h1 class="project-name">DayZ</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/MagikModder/DayZ-Code" class="btn">View SRC on GitHub</a>
+      <a href="http://pastebin.com/u6xHr2Vm" class="btn">Download Build #1-Version 1.0</a>
+  
     </section>
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-DayZ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-DayZ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to DayZ.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>DayZ is an open world survival based game. So we made a mod off of it. again.<a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
