--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-DayZ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to DayZ.</h3>
 
-<p>DayZ is an open world survival based game. So we made a mod off of it. again.<a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>DayZ is an open world survival based game. So we made a mod off of it. again.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
