--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 
     </section>
 
+
+<img src="http://lh5.ggpht.com/JHrc_iSAxB7VZWX7ME1_WO6vGiUoyTWgbqvNqd7xleB0bci5nvNpRj7jo5gFiPsXPSqzrV3E9FBhA3jmhBaqOw=s400" alt="Mountain View" style="width:359px;height:359px;">
+
   
   </body>
 </html>
