--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Features.</h3>
 
 <p>DayZ Mod includes everything from the original but with more. There are over 10 new guns, Vehicles, New armor, New Animations. Its so much better, you would barely recognize it as the same mod.</p>
+<img src="http://lh5.ggpht.com/JHrc_iSAxB7VZWX7ME1_WO6vGiUoyTWgbqvNqd7xleB0bci5nvNpRj7jo5gFiPsXPSqzrV3E9FBhA3jmhBaqOw=s400" alt="Mountain View" style="width:359px;height:359px;">
+<img src="http://media-elerium.cursecdn.com/avatars/28/784/635833866402908908.png" alt="Mountain View" style="width:359px;height:359px;">
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
@@ -48,7 +50,6 @@
     </section>
 
 
-<img src="http://lh5.ggpht.com/JHrc_iSAxB7VZWX7ME1_WO6vGiUoyTWgbqvNqd7xleB0bci5nvNpRj7jo5gFiPsXPSqzrV3E9FBhA3jmhBaqOw=s400" alt="Mountain View" style="width:359px;height:359px;">
 
   
   </body>
