--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     </section>
 
     <section class="main-content">
+  <img src="http://orig03.deviantart.net/e7c2/f/2012/218/f/1/dayz_mod_logo_by_lexhorv-d59zm2x.png" alt="Mountain View" style="width:752px;height:359px;">
+
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-DayZ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to DayZ.</h3>
 
-<img src="http://www.ubermc.net/Large_dayz.png" alt="Mountain View" style="width:359px;height:359px;">
 
 <p>DayZ is an open world survival based game. So we made a mod off of it. again. An unknown infection has wiped out most of the world's population. Go Solo or team up with friends to take on the world as you choose your path in this brutal and chilling landscape using whatever means you stumble upon to survive.</p>
 
