--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
 <p><a href="http://www.minecraftforum.net/members/HoBoS_TaCo" class="user-mention">@HoBos_TaCo</a>: Original Lead Programmer and Developer, <a href="http://www.minecraftforum.net/members/magikisfresh" class="user-mention">@MagikModder</a>: Lead Programmer and Developer.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dev Hub</h3>
 
-<p>Having trouble with DayZ? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Welcome to the Dev Hub. Here you can find all you need to know about the mod. Current </p>
+<p>Update #1-Models that are done.</p>
+<img src="http://i.gyazo.com/8f89e58238eafd2c693a56d27a45c414.png" alt="Mountain View" style="width:359px;height:359px;">
+<img src="http://img11.deviantart.net/008b/i/2013/314/1/c/uh_1y_venom_by_taskforce52-d6trd0d.png" alt="Mountain View" style="width:359px;height:359px;">
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://DayZ.github.io">Dayz.GitHub.io</a> is Developed by <a href="https://github.com/MagikModder">MagikModder</a>.</span>
