--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dev Hub</h3>
 
 <p>Welcome to the Dev Hub. Here you can find all you need to know about the mod. Current </p>
-<p>Update #1-Models that are done.</p>
+<p>Update #1-An early look at a couple of the models</p>
 <img src="http://i.gyazo.com/8f89e58238eafd2c693a56d27a45c414.png" alt="Mountain View" style="width:359px;height:359px;">
-<img src="http://img11.deviantart.net/008b/i/2013/314/1/c/uh_1y_venom_by_taskforce52-d6trd0d.png" alt="Mountain View" style="width:359px;height:359px;">
+<img src="http://i.imgur.com/FblV2bP.png?1" alt="Mountain View" style="width:359px;height:359px;">
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://DayZ.github.io">Dayz.GitHub.io</a> is Developed by <a href="https://github.com/MagikModder">MagikModder</a>.</span>
