--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
     <section class="main-content">
   <img src="http://orig03.deviantart.net/e7c2/f/2012/218/f/1/dayz_mod_logo_by_lexhorv-d59zm2x.png" alt="Mountain View" style="width:752px;height:359px;">
 
+ <div id="splashscreen">
+    <h2>Welcome !</h2>
+    Take a look at our new products, blablabla
+    <img src="http://i.telegraph.co.uk/multimedia/archive/02182/kitten_2182000b.jpg" />
+
+    <a href="#" class="enter_link">Enter on the website</a>
+</div>
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-DayZ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to DayZ.</h3>
 
