--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
+</div></td></tr></table></div><div id="I567" style="display:block;clear: both;text-align:left;" class="HTML_Default"> 
+    <div id="I567_html"><div id="I301" style="display:block;clear: both;text-align:left;" class="HTML_Default"><div id="I301_html">
+      <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+      <script type="text/javascript">setTimeout("$('#loading').fadeOut(700);", 6000);  </script>
+      <style type="text/css">  #loading {    position:absolute;    top:0;    left:0;    padding-top:200px;    text-align:center;    background-color:white;    width:100%;    height:100%;    color:black;    z-index:9000;  }    </style>
+      <div id="loading"></div></div></div> 
+</div> 
 <!DOCTYPE html>
 <html lang="en-us">
- <div id="splashscreen">
-    <h2>Welcome !</h2>
-    Take a look at our new products, blablabla
-    <img src="http://i.telegraph.co.uk/multimedia/archive/02182/kitten_2182000b.jpg" />
-
-    <a href="#" class="enter_link">Enter on the website</a>
-</div>
 
   <head>
     <meta charset="UTF-8">
