--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dev Hub</h3>
 
-<p>Welcome to the Dev Hub. Here you can find all you need to know about the mod. Current </p>
-<p>Update #1-An early look at a couple of the models</p>
-<img src="http://i.gyazo.com/8f89e58238eafd2c693a56d27a45c414.png" alt="Mountain View" style="width:359px;height:359px;">
-<img src="http://i.imgur.com/FblV2bP.png?1" alt="Mountain View" style="width:359px;height:359px;">
+<p>Welcome to the Dev Hub. Updated Monthly! </p>
+<p>Update #1- December Dev Update</p>
+<p>December
+By the end of December we hope to have the rewrite  completed. Afterwards we will  begin testing multiplayer  internally, as many of the current features have not been tested for proper synchronization and there will be bugs to work out. Finally we can then begin moving on to Steam integration  and working towards eventual distribution  to our backers, which we are quite excited for.
 
+Thanks for reading,  we hope to see you in the next update! If  you have any questions or just want to comment on the update be sure to visit our Reddit post below!  :)</p>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://DayZ.github.io">Dayz.GitHub.io</a> is Developed by <a href="https://github.com/MagikModder">MagikModder</a>.</span>
 
