--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <p>Welcome to the Dev Hub. Updated Monthly! </p>
 <p>Update #1- December Dev Update</p>
 <p>December
-By the end of December we hope to have the rewrite  completed. Afterwards we will  begin testing multiplayer  internally, as many of the current features have not been tested for proper synchronization and there will be bugs to work out. Finally we can then begin moving on to Steam integration  and working towards eventual distribution  to our backers, which we are quite excited for.
+By the end of December we hope to have the rewrite  completed. Afterwards we will  begin testing multiplayer  internally, as many of the current features have not been tested for proper synchronization and there will be bugs to work out. Finally we can then begin moving on to API integration  and working towards eventual distribution  to our backers, which we are quite excited for.
 
 Thanks for reading,  we hope to see you in the next update! If  you have any questions or just want to comment on the update be sure to visit our Reddit post below!  :)</p>
       <footer class="site-footer">
