--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Produced and Developed by <a href=http://magikmodder.github.io/Altisimogames.github.io/AltisimoGames</a> LLC, <a href="http://www.minecraftforum.net/members/HoBoS_TaCo" class="user-mention">@HoBos_TaCo</a>: Original Lead Programmer and Developer, <a href="http://www.minecraftforum.net/members/magikisfresh" class="user-mention">@MagikModder</a>: Lead Programmer and Developer.</p>
+<p>Produced and Developed by <a href="http://magikmodder.github.io/Altisimogames.github.io/" class="user-mention">@AltisimoGames.github.io LLC</a>, <a href="http://www.minecraftforum.net/members/HoBoS_TaCo" class="user-mention">@HoBos_TaCo</a>: Original Lead Programmer and Developer, <a href="http://www.minecraftforum.net/members/magikisfresh" class="user-mention">@MagikModder</a>: Lead Programmer and Developer.</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dev Hub</h3>
