--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
       <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
       <script type="text/javascript">setTimeout("$('#loading').fadeOut(700);", 6000);  </script>
       <style type="text/css">  #loading {    position:absolute;    top:0;    left:0;    padding-top:200px;    text-align:center;    background-color:white;    width:100%;    height:100%;    color:black;    z-index:9000;  }    </style>
+      <p>Loading...</p>
       <div id="loading"></div></div></div> 
+      
 </div> 
 
   <head>
