--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">DayZ</h1>
+      <h1 class="project-name">iRECORD</h1>
       <h2 class="project-tagline"></h2>
       <a href="http://www.altisimogames.com" class="btn">Altisimogames.com</a>
-      <a href="http://pastebin.com/u6xHr2Vm" class="btn">Download Build #74/a>
+      <a href="http://pastebin.com/u6xHr2Vm" class="btn">Download Build #74</a>
   
     </section>
 
     <section class="main-content">
-  <img src="http://a614.phobos.apple.com/us/r1000/106/Purple/v4/e1/28/8b/e1288b63-4531-b99b-0b80-f616cea8a543/mzl.pmyiiczz.png" alt="Mountain View" style="width:752px;height:359px;">
+  <img src="https://d1iiooxwdowqwr.cloudfront.net/pub/appsubmissions/20151102115217_appiconspire180.png" alt="Mountain View" style="width:752px;height:359px;">
 
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-DayZ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to DayZ.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-DayZ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to iRecord.</h3>
 
 
 <p>iRecord was developed due to the fact that there is no stable iOS Recorders on the market right now that work for iOS 9. iRecord now utilizes Swift 2.0</p>
